Refactor for future version