@@ -1,6 +1,6 @@
 package my.edu.utem.ftmk.fis9.global.util;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 /**
  * @author Satrya Fajri Pratama
@@ -8,7 +8,7 @@ import javax.xml.bind.DatatypeConverter;
 public class StringProtector
 {
 	private static char[] key = "ftmkutem".toCharArray();
-	
+
 	private static String xor(String text)
 	{
 		char[] message = text.toCharArray();
@@ -17,16 +17,16 @@ public class StringProtector
 
 		for (int i = 0; i < length; i++)
 			msg[i] = (char) (message[i] ^ key[i % key.length]);
-		
+
 		return new String(msg);
 	}
-	
+
 	public static String encrypt(String text, int level)
 	{
 		if (text != null)
 			for (int i = 0; i < level; i++)
-				text = DatatypeConverter.printBase64Binary(xor(text).getBytes());
-		
+				text = Base64.getEncoder().encodeToString(xor(text).getBytes());
+
 		return text;
 	}
 
@@ -34,8 +34,8 @@ public class StringProtector
 	{
 		if (text != null)
 			for (int i = 0; i < level; i++)
-				text = xor(new String(DatatypeConverter.parseBase64Binary(text)));
-		
+				text = xor(new String(Base64.getDecoder().decode(text)));
+
 		return text;
 	}
 }
